modified:   grammar.latex modified:   grammar.pdf modified:   verbs/denati.yaml modified:   verbs/doti.yaml new file:   verbs/fekmi.yaml new file:   verbs/leloipe.yaml new file:   verbs/linepti.yaml modified:   verbs/voide.yaml

--- a/grammar/verbs/denati.yaml
+++ b/grammar/verbs/denati.yaml
@@ -45,7 +45,7 @@ active:
       - dedenate
   participle:
     present: denonts
-    perfect: dedenés
+    perfect: dedenvés
   infinitive:
     present: denatin
     perfect: dedenatin
