--- a/grammar/verbs/voide.yaml
+++ b/grammar/verbs/voide.yaml
@@ -15,12 +15,12 @@ active:
       - vindete
       - vindont
     perfect:
-      - videm
-      - vides
-      - videt
-      - vidome
-      - videte
-      - vidont
+      - evoida
+      - evoista
+      - evoide
+      - evidme
+      - eviste
+      - evidant
   subjunctive:
     present:
       - vinjém
